[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/SlideSelect.gd" type="Script" id=1]
[ext_resource path="res://assets/arrow-right.png" type="Texture" id=2]
[ext_resource path="res://assets/arrow-left.png" type="Texture" id=3]
[ext_resource path="res://assets/arrow-right-disabled.png" type="Texture" id=4]
[ext_resource path="res://assets/arrow-left-disabled.png" type="Texture" id=5]

[node name="SlideSelect" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrevButton" type="TextureButton" parent="."]
visible = false
margin_right = 16.0
margin_bottom = 300.0
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 5 )

[node name="Labels" type="CenterContainer" parent="."]
margin_right = 512.0
margin_bottom = 300.0
size_flags_horizontal = 3

[node name="NextButton" type="TextureButton" parent="."]
visible = false
margin_left = 496.0
margin_right = 512.0
margin_bottom = 300.0
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 4 )
[connection signal="pressed" from="PrevButton" to="." method="prev_button_pressed"]
[connection signal="pressed" from="NextButton" to="." method="next_button_pressed"]
